# Intelligent_Interaction

./: .gitattributes  .gitignore  App.tsx  README.md  api.config.example.ts  config.ts  constants.ts  electron.cjs  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts  愤怒猫咪功能说明.md  连续点击功能实现总结.md
backend/: .env.example  __init__.py  agent-backend.spec  pyproject.toml  requirements-release.txt  sidecar_entry.py  windows-version.txt
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  prompts.py  runtime.py  text.py
backend/app/api/: audio_routes.py  auth.py  memory_routes.py  routes.py
backend/app/core/: config.py  logging.py
backend/app/memory/: __init__.py  database.py  service.py
backend/app/providers/: __init__.py  base.py  openai_compatible.py
backend/app/schemas/: contracts.py
backend/app/speech/: __init__.py  base.py  service.py  store.py  volcengine.py  wav.py  xunfei.py
backend/app/tools/: __init__.py  adapters.py  audit.py  models.py  registry.py
backend/tests/: test_agent.py  test_agent_text.py  test_agent_tools.py  test_api.py  test_audio_api.py  test_long_term_memory.py  test_memory.py  test_prompts.py  test_provider.py  test_provider_tools.py  test_speech.py  test_tools.py
components/: CatAvatar.tsx  ChatBubble.tsx  ToolConfirmationModal.tsx
contracts/: agent-states.json  audio.schema.json  errors.schema.json  events.schema.json  persistence.schema.json  tools.schema.json
docs/: architecture.md  legacy-baseline.md  phase-0-1-status.md  phase-2-3-status.md  phase-4-status.md  (+9 more)
(+59 files in other folders)
