[project]
name = "intelligent-interaction-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "uvicorn>=0.34,<1"
]

[project.optional-dependencies]
test = ["httpx>=0.27,<1", "pytest>=8,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
