[project]
name = "intelligent-interaction-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jsonschema>=4.23,<5",
  "pydantic>=2.10,<3",
  "python-dotenv>=1.0,<2",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
  "openpyxl>=3.1,<4",
  "python-pptx>=1,<2",
  "pillow>=11,<13",
  "uvicorn>=0.34,<1",
  "websockets>=14,<16"
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
